--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorpresa Fotos San Valentín</title>
+    <title>Sorpresa de San Valentín 💖</title>
     <link rel="stylesheet" href="style_login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,21 +12,21 @@
 <body>
 
     <div id="encabezado-container">
-        <div id="brillo">¡Feliz Día de San Valentín! 💞</div>
+        <div id="brillo">💖 ¡Feliz Día de San Valentín! 💖</div>
     </div>
 
     <div class="galeria">
-        <img src="ima1.jpg">
-        <img src="ima2.jpg">
-        <img src="ima3.jpg">
-        <img src="ima4.jpg">
-        <img src="ima1.jpg">
+        <img src="ima1.jpg" alt="Foto 1">
+        <img src="ima2.jpg" alt="Foto 2">
+        <img src="ima3.jpg" alt="Foto 3">
+        <img src="ima4.jpg" alt="Foto 4">
+        <img src="ima1.jpg" alt="Foto 5">
     </div>
 
     <div class="login-container">
-        <p>Ingresa la contraseña para ver tu sorpresa 💖</p>
-        <input type="password" id="password" placeholder="Contraseña">
-        <button onclick="verificarPassword()">Ingresar</button>
+        <p>💗 Ingresa la contraseña para ver tu sorpresa 💗</p>
+        <input type="password" id="password" placeholder="🔒 Contraseña">
+        <button onclick="verificarPassword()">💘 Ingresar 💘</button>
         <p id="mensaje"></p>
     </div>
 
@@ -36,8 +36,10 @@
             if (password === "121217") {
                 window.location.href = "login.html";
             } else {
-                document.getElementById("mensaje").innerText = "Inténtalo de nuevo amor. Tu puedes!";
-                document.getElementById("mensaje").style.color = "red";
+                var mensaje = document.getElementById("mensaje");
+                mensaje.innerText = "❌ Inténtalo de nuevo amor. ¡Tú puedes! 💪💕";
+                mensaje.style.color = "red";
+                mensaje.style.animation = "shake 0.5s";
             }
         }
     </script>
