--- a/si.html
+++ b/si.html
@@ -8,10 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="sparkles"></div> <!-- Chispitas izquierda -->
+    
     <div class="container">
         <div class="gif-container">
             <div class="tenor-gif-embed" data-postid="12274813988778769787" data-share-method="host" data-aspect-ratio="1.05778" data-width="100%">
-                <a href="https://tenor.com/view/kiss-gif-12274813988778769787">Kiss Sticker</a> from 
+                <a href="https://tenor.com/view/kiss-gif-12274813988778769787">Kiss Sticker</a>from 
                 <a href="https://tenor.com/search/kiss-stickers">Kiss Stickers</a>
             </div> 
             <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
@@ -24,5 +26,8 @@
             <a href="carta.html">💌 ¡SORPRESA! 💌</a>
         </div>
     </div>
+
+    <div class="sparkles right"></div> <!-- Chispitas derecha -->
 </body>
 </html>
+
