--- a/carta.html
+++ b/carta.html
@@ -12,7 +12,7 @@
       <div class="cover"></div>
       <span class="heart">♥</span>
       <p class="paper" id="mainMessage">
-        En este día especial, quiero agradecerte por estar siempre a mi lado y por todo el amor y apoyo que me das. Sé que juntos alcanzaremos cada uno de nuestros sueños, y quiero que siempre cuentes conmigo para apoyarte, acompañarte y darte todo mi amor. ¡Feliz día, mi niño!
+        En este día especial, quiero agradecerte por estar siempre a mi lado y por todo el amor y apoyo que me das. Sé que juntos alcanzaremos cada uno de nuestros sueños, y quiero que siempre cuentes conmigo para apoyarte, acompañarte y darte todo mi amor. ¡Feliz día, mi niño💖!
       </p>
       <div class="letter"></div>
 
